Modified Zhang article to add headings

--- a/Zhang.tex
+++ b/Zhang.tex
@@ -22,9 +22,7 @@ cars require less parking space. In the past few years, MOD services have
 begun operation in dozens of cities throughout North America and Europe, with 
 notable examples including CAR2GO and Autolib’ Paris.
 
-
-
-\textbf{Where Automonous Cars Rule}
+\subsection*{\textbf{Where Automonous Cars Rule}}
 
 However, because some destinations in a city are more popular than others, 
 customer trips to popular destinations will deplete cars from certain areas of 
@@ -57,9 +55,7 @@ translate into long-term environmental sustainability and potential cost
 savings for customers without sacrificing the convenience of personal 
 mobility.
 
-
-
-\textbf{Reduced Environmental Costs}
+\subsection*{\textbf{Reduced Environmental Costs}}
 
 The environmental benefits of autonomous MOD systems result from the fact that 
 car sharing yields high utilization rates and that vehicles are restricted to 
@@ -91,9 +87,7 @@ vehicles provide a large bank of energy storage and can sell electricity back
 into the power grid to mitigate peak demand, which is beneficial to renewable 
 but intermittent energy sources such as solar and wind.
 
-
-
-\textbf{How Does it Work?}
+\subsection*{\textbf{How Does it Work?}}
 
 The practical benefits of autonomous MOD systems can lead to their widespread 
 implementation in the next 5 to 10 years. Currently in the busiest cities in 
@@ -119,9 +113,7 @@ Finally, robotic vehicles also hold the promise to increase safety by
 eliminating human factors, which contribute to 95\% of current traffic 
 accidents.
 
-
-
-\textbf{The Way Forward}
+\subsection*{\textbf{The Way Forward}}
 
 Despite all the advantages of autonomous MOD systems, there are two key 
 challenges that must be addressed before their widespread implementation. 
