Added a proper dash in the title.
Still need to add a graphic on top. This should hopefully fix the section spacing.

--- a/Zhang.tex
+++ b/Zhang.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\begin{news}{2}{Autonomous Mobility-On-Demand – A Solution for Sustainable Urban Personal Mobility}{Rick Zhang}{}{}
+\begin{news}{2}{Autonomous Mobility-On-Demand -- A Solution for Sustainable Urban Personal Mobility}{Rick Zhang}{}{}
 
 According to the United Nations, the world population living in urban areas 
 will double by 2050, with most of the urbanization occurring in the developing 
