--- a/Zhang.tex
+++ b/Zhang.tex
@@ -148,6 +148,10 @@ represents a paradigm shift away from private ownership towards collective
 sharing and public ownership of our transportation infrastructure for a more 
 sustainable future.
 
+\subsubsection*{}
+
+\emph{Rick Zhang is a Ph.D. candidate in the Autonomous Systems Laboratory in the Department of Aeronautics and Astronautics at Stanford. He works with Prof. Marco Pavone applying interdisciplinary research at the junction between robotics and transportation science to future mobility systems. He received his BASc in Engineering Science from the University of Toronto and his M.S. in Aeronautics and Astronautics from Stanford.}
+
 \end{news}
 
 \end{document}
