Fixed apostrophes in Wu, Fyffe, Colonno, Zhang.
Added a \usepackage command with encoding. This should fix all apostrophe
errors.

--- a/Colonno.tex
+++ b/Colonno.tex
@@ -1,5 +1,8 @@
 \documentclass{papertex}
+\usepackage[utf8]{inputenc}
 
+
+%% Document begins here
 \begin{document}
 
 \begin{news}{2}{Sustainable Air Travel for a Carbon-Free Future}{Michael Colonno and Juan J. Alonso}{}{}
