--- a/Fyffe.tex
+++ b/Fyffe.tex
@@ -1,5 +1,7 @@
 \documentclass{papertex}
+\usepackage[utf8]{inputenc}
 
+%% Document begins here
 \begin{document}
 
 \begin{news}{2}{The Reports of My Death Have Been Greatly Exaggerated -- An Internal Combustion Engine’s Story}{John Fyffe}{}{}
