--- a/Wu.tex
+++ b/Wu.tex
@@ -1,6 +1,8 @@
 \documentclass{papertex}
 \usepackage{amsmath}
+\usepackage[utf8]{inputenc}
 
+%% Document begins here
 \begin{document}
 
 \begin{news}{2}{Fuels for Fresh Air}{Diane Wu, in conversation with Mark Jacobson}{}{}
