Fixed all alignment, checked that files compile

--- a/Colonno.tex
+++ b/Colonno.tex
@@ -126,7 +126,12 @@ introduced into the next generation of our commercial fleet.
 
 \subsubsection*{}
 
-\emph{Michael Colonno is an Engineering Research Associate at the Aerospace Design Lab in the Department of Aeronautics and Astronautics at Stanford University. He works with Prof. Juan Alonso on advanced aircraft design and green aviation. Michael holds an M.S. and a PhD in Aeronautics and Astronautics at Stanford. Prior to Stanford, he also was the Director of the Aerodynamics Group at Space Exploration Technologies.}
+\emph{Michael Colonno is an Engineering Research Associate at the Aerospace 
+Design Lab in the Department of Aeronautics and Astronautics at Stanford 
+University. He works with Prof. Juan Alonso on advanced aircraft design and 
+green aviation. Michael holds an M.S. and a PhD in Aeronautics and Astronautics 
+at Stanford. Prior to Stanford, he also was the Director of the Aerodynamics 
+Group at Space Exploration Technologies.}
 
 \end{news}
 
