--- a/Fyffe.tex
+++ b/Fyffe.tex
@@ -168,7 +168,10 @@ engineering envelope to create the IC engines of tomorrow.
 
 \subsubsection*{}
 
-\emph{John Fyffe is a Ph.D. student in Mechanical Engineering (ME) at Stanford University and works in the Advanced Energy Systems Laboratory (AESL). He received his B.S. in ME from the University of Texas at Austin and his M.S. in ME at Stanford University.}
+\emph{John Fyffe is a Ph.D. student in Mechanical Engineering (ME) at Stanford 
+University and works in the Advanced Energy Systems Laboratory (AESL). He 
+received his B.S. in ME from the University of Texas at Austin and his M.S. 
+in ME at Stanford University.}
 
 \end{news}
 
