fixed word wrap

--- a/Miret.tex
+++ b/Miret.tex
@@ -4,33 +4,135 @@
 
 \begin{news}{2}{Emerging Technologies for the Future Automobile}{Santiago Miret}{}{}
 
-Every day, the United States burns over 13 million barrels of oil to maintain its vast transportation system, with ~8.8 million barrels of that used for personal cars. America's reliance on oil has many hidden implications to health, domestic and foreign policy, climate change, and the environment, creating the need for alternative transportation power sources. Electric vehicles (EVs) have experienced tremendous success in 2013 (see a previous SEJ article on EV batteries), but they are not the only option. EVs are already facing competition from new emerging car technologies that aim to replace internal combustion engine cars. The major competitors of EVs are compressed natural gas (CNG) cars, and fuel cell vehicles (FCV). Further emerging technologies, such as carbon fiber auto bodies, may also transform the future of sustainable transportation by making future automobiles lighter.
-
+Every day, the United States burns over 13 million barrels of oil to maintain
+its vast transportation system, with ~8.8 million barrels of that used for
+personal cars. America's reliance on oil has many hidden implications to health,
+domestic and foreign policy, climate change, and the environment, creating the
+need for alternative transportation power sources. Electric vehicles (EVs) have
+experienced tremendous success in 2013 (see a previous SEJ article on EV
+batteries), but they are not the only option. EVs are already facing competition
+from new emerging car technologies that aim to replace internal combustion
+engine cars. The major competitors of EVs are compressed natural gas (CNG) cars,
+and fuel cell vehicles (FCV). Further emerging technologies, such as carbon
+fiber auto bodies, may also transform the future of sustainable transportation
+by making future automobiles lighter.
+\\
+\\
 \textbf{Natural Gas Vehicles}
+\\
+\\
+The recent natural gas boom in the United States has prompted renewed
+engineering work on CNG vehicles. With current natural gas prices, CNG vehicles
+fill up for less than a third the cost of gasoline (~\$1.30/gallon equivalent
+for natural gas at central filling stations for CNG fleet vehicles vs.
+~\$3.30/gallon for gasoline), while also performing on slightly higher engine
+efficiency. Moreover, natural gas is domestically produced and cleaner than
+gasoline: the California Air Resources Board estimates that CNG cars would emit
+20\% less greenhouse gases than gasoline-powered cars. One of the technical
+challenges for CNG cars is the storage capacity of the tank: since natural gas
+occupies more volume per unit energy than gasoline, cars require a larger tank
+for similar range. At typical pressures (~3,600 psi) a CNG tank requires about
+four times the space of a gasoline tank. An innovative solution for that problem
+has been proposed by the startup company Otherlab, which designed a CNG tank
+based on the human intestine system. The system spreads the volume of the tank
+across the car, allowing engineers to fit larger tanks into existing car designs
+without having to sacrifice trunk or seating space.
 
-The recent natural gas boom in the United States has prompted renewed engineering work on CNG vehicles. With current natural gas prices, CNG vehicles fill up for less than a third the cost of gasoline (~\$1.30/gallon equivalent for natural gas at central filling stations for CNG fleet vehicles vs. ~\$3.30/gallon for gasoline), while also performing on slightly higher engine efficiency. Moreover, natural gas is domestically produced and cleaner than gasoline: the California Air Resources Board estimates that CNG cars would emit 20\% less greenhouse gases than gasoline-powered cars. One of the technical challenges for CNG cars is the storage capacity of the tank: since natural gas occupies more volume per unit energy than gasoline, cars require a larger tank for similar range. At typical pressures (~3,600 psi) a CNG tank requires about four times the space of a gasoline tank. An innovative solution for that problem has been proposed by the startup company Otherlab, which designed a CNG tank based on the human intestine system. The system spreads the volume of the tank across the car, allowing engineers to fit larger tanks into existing car designs without having to sacrifice trunk or seating space.
-
-Today 135,000 commercial CNG vehicles are already in use in the US, but the main problem for CNG cars remains infrastructure. As of October 2013, there are only 1,065 natural gas filling stations operating in the US, which is miniscule compared to the roughly 168,000 gasoline stations. Given the lack of infrastructure, many companies have focused on a fleet conversion strategy and established central locations for refueling. Fleet conversion strategies, however, are not an effective strategy to build infrastructure for individual consumers. Consequently, companies are developing home refueling systems where consumers can fill up their CNG cars from the comfort of their homes. Honda, maker of the CNG Honda Civic GX, is currently working with General Electric and Whirlpool to design new home refueling units. Current units, such as the \$6,000 system from Go Natural CNG, remain too expensive for most consumers.
-
+Today 135,000 commercial CNG vehicles are already in use in the US, but the main
+problem for CNG cars remains infrastructure. As of October 2013, there are only
+1,065 natural gas filling stations operating in the US, which is miniscule
+compared to the roughly 168,000 gasoline stations. Given the lack of
+infrastructure, many companies have focused on a fleet conversion strategy and
+established central locations for refueling. Fleet conversion strategies,
+however, are not an effective strategy to build infrastructure for individual
+consumers. Consequently, companies are developing home refueling systems where
+consumers can fill up their CNG cars from the comfort of their homes. Honda,
+maker of the CNG Honda Civic GX, is currently working with General Electric and
+Whirlpool to design new home refueling units. Current units, such as the \$6,000
+system from Go Natural CNG, remain too expensive for most consumers.
+\\
+\\
 \textbf{Fuel Cell Vehicles}
+\\
+\\
+The first Fuel Cell Vehicle (FCV) models were shown in November 2013 in
+prominent auto shows across two continents. The first showing occurred during
+the Tokyo Auto Show, where automakers defied skeptics who thought that FCVs were
+at least ten years from being technologically mature. Toyota announced that
+mass-produced FCVs would come to Japan in 2015 and to the US in 2016. One week
+later in the Los Angeles Auto Show Honda showed off a futuristic FCV design, and
+Hyundai revealed the Tucson, a hydrogen powered small SUV that will be available
+for leasing in the Los Angeles area in 2014.
 
-The first Fuel Cell Vehicle (FCV) models were shown in November 2013 in prominent auto shows across two continents. The first showing occurred during the Tokyo Auto Show, where automakers defied skeptics who thought that FCVs were at least ten years from being technologically mature. Toyota announced that mass-produced FCVs would come to Japan in 2015 and to the US in 2016. One week later in the Los Angeles Auto Show Honda showed off a futuristic FCV design, and Hyundai revealed the Tucson, a hydrogen powered small SUV that will be available for leasing in the Los Angeles area in 2014.
-
-Hydrogen fueled FCVs have been previously held back by safety and reliability concerns, which have been overcome through years of research and development. FCVs offer significant advantages to EVs, as the refueling process is as fast as in gasoline-powered cars. Similarly to CNG cars, the main obstacles for FCVs will be the scarcity of hydrogen fueling stations, along with the supply of hydrogen. Currently hydrogen costs ~\$3 per gallon of gasoline equivalent, which is competitive with gas prices in many areas of the US. Hydrogen is most commonly produced by the steam reforming of natural gas, a process involving a 25\% energy loss in commercial systems. Since the FCV powertrain is about three times more efficient than internal combustion engines, including CNG engines, FCVs effectively use natural gas at about twice as efficiency as CNGs on the system level. It's no accident that FCVs are being introduced to the US in Los Angeles, home to the only nine public hydrogen refueling stations in the country. The state of California has pledged \$100 million over five years for new hydrogen fueling stations. In spite of their promise, FCVs will face competition from more established EV infrastructure in the state, since both classes of vehicles are chasing the same wealthy early-adopters. However, FCVs may be able to find a market niche in heavy-duty vehicles.
-
+Hydrogen fueled FCVs have been previously held back by safety and reliability
+concerns, which have been overcome through years of research and development.
+FCVs offer significant advantages to EVs, as the refueling process is as fast as
+in gasoline-powered cars. Similarly to CNG cars, the main obstacles for FCVs
+will be the scarcity of hydrogen fueling stations, along with the supply of
+hydrogen. Currently hydrogen costs ~\$3 per gallon of gasoline equivalent, which
+is competitive with gas prices in many areas of the US. Hydrogen is most
+commonly produced by the steam reforming of natural gas, a process involving a
+25\% energy loss in commercial systems. Since the FCV powertrain is about three
+times more efficient than internal combustion engines, including CNG engines,
+FCVs effectively use natural gas at about twice as efficiency as CNGs on the
+system level. It's no accident that FCVs are being introduced to the US in Los
+Angeles, home to the only nine public hydrogen refueling stations in the
+country. The state of California has pledged \$100 million over five years for
+new hydrogen fueling stations. In spite of their promise, FCVs will face
+competition from more established EV infrastructure in the state, since both
+classes of vehicles are chasing the same wealthy early-adopters. However, FCVs
+may be able to find a market niche in heavy-duty vehicles.
+\\
+\\
 \textbf{Carbon Fiber}
+\\
+\\
+The fastest way to decrease fossil fuel reliance would be to increase vehicle
+fuel efficiency. A simple way to do this is to make cars lighter. The largest
+contributor to an automobile's weight is the auto-body, which is presently
+almost entirely steel. Steel provides high strength, as well as great durability
+and long-term reliability. However, steel could soon be replaced by carbon fiber
+composites, which provide structural advantages at half the weight.
 
-The fastest way to decrease fossil fuel reliance would be to increase vehicle fuel efficiency. A simple way to do this is to make cars lighter. The largest contributor to an automobile's weight is the auto-body, which is presently almost entirely steel. Steel provides high strength, as well as great durability and long-term reliability. However, steel could soon be replaced by carbon fiber composites, which provide structural advantages at half the weight.
+The tradeoff is price. The Rocky Mountain Institute (RMI) estimates that
+replacing auto-body parts with carbon fiber would cost between \$2.78 to \$4.76
+per pound that is saved on the overall weight of the car. American cars weigh an
+average of 4,000 pounds, so reducing their weight by 50\% would cost
+\$5,000-10,000. Given this high cost, some carbon fiber proponents, including
+the RMI, propose a part-by-part approach. The replacement of selected parts
+would allow the supply chains for carbon fiber composite products to grow, which
+will then catalyze innovation and reduce cost, resulting in a positive feedback
+loop.
 
-The tradeoff is price. The Rocky Mountain Institute (RMI) estimates that replacing auto-body parts with carbon fiber would cost between \$2.78 to \$4.76 per pound that is saved on the overall weight of the car. American cars weigh an average of 4,000 pounds, so reducing their weight by 50\% would cost \$5,000-10,000. Given this high cost, some carbon fiber proponents, including the RMI, propose a part-by-part approach. The replacement of selected parts would allow the supply chains for carbon fiber composite products to grow, which will then catalyze innovation and reduce cost, resulting in a positive feedback loop.
+But this gradual building of the carbon fiber market may not be necessary. BMW
+has already built the body of its new electric powered BMW i3 completely from
+carbon fiber. One reason for their success is that they produce carbon fiber at
+1/3 of market price due to the cheap energy cost of their factory. Carbon fiber
+production involves the slow pulling of polymer filaments in high-temperature
+carbonization ovens into fiber chains. The fibers are then stitched into mats,
+layered together and injected with plastic resin. The BMW factory is located in
+Moses Lake, Washington, and uses cheap local hydroelectric power for the energy
+intensive carbon fiber production process.
 
-But this gradual building of the carbon fiber market may not be necessary. BMW has already built the body of its new electric powered BMW i3 completely from carbon fiber. One reason for their success is that they produce carbon fiber at 1/3 of market price due to the cheap energy cost of their factory. Carbon fiber production involves the slow pulling of polymer filaments in high-temperature carbonization ovens into fiber chains. The fibers are then stitched into mats, layered together and injected with plastic resin. The BMW factory is located in Moses Lake, Washington, and uses cheap local hydroelectric power for the energy intensive carbon fiber production process.
-
-While the development of carbon fiber auto bodies will drastically improve fuel economy for all future car models, different non-gasoline car types will soon be competing for commercial and consumer vehicle markets. As the technology of CNG vehicles, FVCs, and EVs continues to advance, the infrastructure will become more and more important. Whereas the EV infrastructure continues to grow in the market environment, both the CNG and FCV infrastructure will need strong financial support, either from government or resourceful private backers, for their respective cars to become commercially viable.
+While the development of carbon fiber auto bodies will drastically improve fuel
+economy for all future car models, different non-gasoline car types will soon be
+competing for commercial and consumer vehicle markets. As the technology of CNG
+vehicles, FVCs, and EVs continues to advance, the infrastructure will become
+more and more important. Whereas the EV infrastructure continues to grow in the
+market environment, both the CNG and FCV infrastructure will need strong
+financial support, either from government or resourceful private backers, for
+their respective cars to become commercially viable.
 
 \subsubsection*{}
 
-\emph{Santiago Miret is a PhD student in Materials Science and Engineering at the University of California, Berkeley, with a great interest in future energy technologies. In addition to his scientific research in electrochemistry, he explores energy issues from interdisciplinary perspectives as a writer for the Berkeley Energy and Resources Collaborative (BERC). While pursuing his BS in Materials Science from the University of Maryland, he interned in the financial industry and consulted for major defense contractors on business and technology focused projects}
+\emph{Santiago Miret is a PhD student in Materials Science and Engineering at
+the University of California, Berkeley, with a great interest in future energy
+technologies. In addition to his scientific research in electrochemistry, he
+explores energy issues from interdisciplinary perspectives as a writer for the
+Berkeley Energy and Resources Collaborative (BERC). While pursuing his BS in
+Materials Science from the University of Maryland, he interned in the financial
+industry and consulted for major defense contractors on business and technology
+focused projects}
 
 \end{news}
 
