changed to 0.40 from .40

--- a/Frank.tex
+++ b/Frank.tex
@@ -62,7 +62,7 @@ throughout the state in the most energy efficient method possible. Starting in
 provide non-stop service from Merced to the San Fernando Valley – with 
 connections via cross-platform transfer to the Bay Area, Sacramento, and 
 locations throughout Southern California. At that stage in operations, the 
-system on any given day will require .40 gigawatt hours (GWh) to deliver 
+system on any given day will require 0.40 gigawatt hours (GWh) to deliver 
 11,000 passengers.  By 2029, non-stop service from the Bay Area to the Los 
 Angeles area will move 528,000 passengers on approximately 2.30 GWh per day. 
 To move the equivalent number of travelers by car would require nearly twice 
