changed textbf to subsubsections

--- a/Miret.tex
+++ b/Miret.tex
@@ -16,11 +16,9 @@ engine cars. The major competitors of EVs are compressed natural gas (CNG) cars,
 and fuel cell vehicles (FCV). Further emerging technologies, such as carbon
 fiber auto bodies, may also transform the future of sustainable transportation
 by making future automobiles lighter.
-\\
-\\
-\textbf{Natural Gas Vehicles}
-\\
-\\
+
+\subsubsection*{Natural Gas Vehicles}
+
 The recent natural gas boom in the United States has prompted renewed
 engineering work on CNG vehicles. With current natural gas prices, CNG vehicles
 fill up for less than a third the cost of gasoline (~\$1.30/gallon equivalent
@@ -50,11 +48,9 @@ consumers can fill up their CNG cars from the comfort of their homes. Honda,
 maker of the CNG Honda Civic GX, is currently working with General Electric and
 Whirlpool to design new home refueling units. Current units, such as the \$6,000
 system from Go Natural CNG, remain too expensive for most consumers.
-\\
-\\
-\textbf{Fuel Cell Vehicles}
-\\
-\\
+
+\subsubsection*{Fuel Cell Vehicles}
+
 The first Fuel Cell Vehicle (FCV) models were shown in November 2013 in
 prominent auto shows across two continents. The first showing occurred during
 the Tokyo Auto Show, where automakers defied skeptics who thought that FCVs were
@@ -82,11 +78,9 @@ new hydrogen fueling stations. In spite of their promise, FCVs will face
 competition from more established EV infrastructure in the state, since both
 classes of vehicles are chasing the same wealthy early-adopters. However, FCVs
 may be able to find a market niche in heavy-duty vehicles.
-\\
-\\
-\textbf{Carbon Fiber}
-\\
-\\
+
+\subsubsection*{Carbon Fiber}
+
 The fastest way to decrease fossil fuel reliance would be to increase vehicle
 fuel efficiency. A simple way to do this is to make cars lighter. The largest
 contributor to an automobile's weight is the auto-body, which is presently
