added bike image

--- a/Bike.tex
+++ b/Bike.tex
@@ -55,7 +55,7 @@ is already being done.
 Notably, people bicycling in places like Copenhagen and Amsterdam are not doing
 so because someone convinced them that biking is good for the environment or
 because they care more deeply than Americans do about lowering their carbon
-footprint. No, the 38\% of Amsterdammers riding (57\% in the city’s core) are
+footprint. No, the 38\% of Amsterdammers riding (57\% in the city's core) are
 doing so largely because they recognize that biking is easier, faster, cheaper,
 and more enjoyable than driving a car.
 
@@ -66,6 +66,8 @@ than car parking), built 250 miles of physically separated bikeways, and slowed
 speeds on other roads to ensure people of all ages and speeds are comfortable
 (especially those on the outer ends of the age spectrum: children and their
 grandparents).
+
+\image{images/bike2}{Dedicated Bike Lanes, Credit: SF Bike Coalition}
 
 Americans are no different than our friends in northern Europe when it comes to
 making basic lifestyle choices. How we decide to get to work, bring our kids to
