--- a/Lovaas.tex
+++ b/Lovaas.tex
@@ -28,6 +28,8 @@ Just three short years later the price of oil broke the \$140 mark. This is a
 reminder that ~\$100 per barrel prices are a relatively new normal, and this 
 backdrop has added a boost to policy drivers described below.
 
+\image{images/oilfree}{Credits: Nayu Kim}
+
 This oil-price rocket boosted the chances that new policies could be 
 implemented to reduce the nation’s oil dependence, and that’s in fact what 
 happened, especially from 2007 on. In 2007, one short year after stunning the 
