--- a/Lovaas.tex
+++ b/Lovaas.tex
@@ -28,7 +28,7 @@ Just three short years later the price of oil broke the \$140 mark. This is a
 reminder that ~\$100 per barrel prices are a relatively new normal, and this 
 backdrop has added a boost to policy drivers described below.
 
-\image{images/oilprice}{High Oil Prices drive change in policy, Credits: Justin R}
+\image{images/oilprice}{High oil prices drive change in policy, Photo: Justin R}
 
 This oil-price rocket boosted the chances that new policies could be 
 implemented to reduce the nation’s oil dependence, and that’s in fact what 
