Wu image added, woo!

--- a/Wu.tex
+++ b/Wu.tex
@@ -35,6 +35,7 @@ Particulate matter causes 80-90\% of mortality from air pollution, and ozone
 is much of the rest. There are other chemicals that contribute to health 
 conditions, especially carcinogens such as benzene, butadiene, acetaldehyde, 
 and formaldehyde.
+\image{images/baypollution}{Smog over the SF Bay, Photo: Diane Wu}
 \\
 \\
 \textbf{How do emissions from diesel compare with those from gasoline?}
