--- a/Zhang.tex
+++ b/Zhang.tex
@@ -24,6 +24,8 @@ cars require less parking space. In the past few years, MOD services have
 begun operation in dozens of cities throughout North America and Europe, with 
 notable examples including CAR2GO and Autolib’ Paris.
 
+\image{images/GMEN-V}{The GM EN-V vehicle}
+
 \subsubsection*{\textbf{Where Automonous Cars Rule}}
 
 However, because some destinations in a city are more popular than others, 
@@ -56,6 +58,8 @@ vehicles away from heavily congested areas. All of these benefits can
 translate into long-term environmental sustainability and potential cost 
 savings for customers without sacrificing the convenience of personal 
 mobility.
+
+\image{images/navia}{The Induct NAVIA}
 
 \subsubsection*{\textbf{Reduced Environmental Costs}}
 
