fyffe images - first 3 pager!

--- a/Fyffe.tex
+++ b/Fyffe.tex
@@ -17,6 +17,8 @@ Research and development efforts are on-going to make modern IC engines more
 efficient, more environmentally friendly, more powerful, and capable of 
 accepting a wider range of fuels.
 
+\image{images/CE}{The modern internal combustion engine}
+
 \subsubsection*{Modern Engines}
 
 Most Americans are familiar with the spark ignition (SI) engines found in most 
@@ -108,6 +110,8 @@ losses.  While a 100:1 is not necessarily practical – the temperatures and
 pressures in such an engine would vastly exceed those in conventional IC 
 engines – it demonstrates the extreme states principle and a method of 
 reducing combustion losses.
+
+\image{images/graph}{Image: B.J. Johnson, Stanford University}
 
 There is work being done in many different areas to improve efficiencies, 
 such as reducing weight and increasing compression ratios. One way to greatly 
