--- a/Colonno.tex
+++ b/Colonno.tex
@@ -83,6 +83,8 @@ of magnitude under hydrocarbon fuels. Without a transformational breakthrough
 in battery technology, a battery-powered airliner with sufficient range and 
 speed isn’t getting off the ground.
 
+\image{images/aircraft}{Proposed conceptual design for a 180 passenger hydrogen fuel cell powered aircraft}
+
 Can we retain the high energy density of chemical energy storage while 
 utilizing the efficiency of electrical power? The answer is yes, though there 
 is no shortage of engineering challenges. Hydrogen, which must be stored in 
