this Beiker commit is blind

--- a/Beiker.tex
+++ b/Beiker.tex
@@ -104,6 +104,8 @@ take this to another level by arranging for a smooth and energy optimal
 traffic flow which would greatly reduce fuel consumption, consequently cutting 
 energy use and reducing emission of pollutants.
 
+\image{images/ncars}{Networked Cars, Photo: US Department of Transportation}
+
 For complete automation a communication link to connect as many vehicles as 
 possible to a centralized control would be necessary, and fortunately this 
 seems feasible within the next 10-15 years. In the meantime, sensors on the 
