--- a/Go.tex
+++ b/Go.tex
@@ -56,6 +56,8 @@ average decline in driving did not seem to correlate with higher than average
 unemployment, suggesting that this behavior cannot be brushed off as a 
 temporary side effect of the recession.
 
+\image{images/lyft}{Carsharing Service - Lyft, Photo: Ya-Ko}
+
 \subsubsection*{Carsharing and Environmental Benefits}
 
 Of the transportation alternatives that millennials are turning to in lieu of 
@@ -95,10 +97,6 @@ By modernizing regulations to embrace multi-modality, transportation planners
 can help to spread more, and better, transportation choices to Americans, 
 whether they live in cities or suburbs.
 
-<<<<<<< HEAD
-=======
-
->>>>>>> a367922f3a0f153a6f6a582bf23d9e2dc217c8ff
 \subsubsection*{}
 
 \emph{Lucian Go works in the Transportation and Urban Solutions programs at 
