Ostheimer, please compile

--- a/Ostheimer.tex
+++ b/Ostheimer.tex
@@ -46,6 +46,9 @@ a future powered by low- and renewable-carbon technologies. Let us consider
 how to double the use of renewables in the transportation sector and the roles 
 that renewable carbon can play moving forward.
 
+\image{images/se4all}{Secretary-General Ban Ki-moon (right) and Jim Yong Kim, President of the World Bank.
+(Photo: UN Photo/Eskinder Debebe)}
+
 The transportation sector represents a mix of technologies. Aviation, 
 maritime, rail, heavy-duty vehicles, and light-duty vehicles for both public 
 and private transportation all have inter-connected but diverse fueling 
