--- a/Miret.tex
+++ b/Miret.tex
@@ -72,6 +72,8 @@ maker of the CNG Honda Civic GX, is currently working with General Electric and
 Whirlpool to design new home refueling units. Current units, such as the \$6,000
 system from Go Natural CNG, remain too expensive for most consumers.
 
+\image{images/hyundai}{Hyundai’s fuel cell powered Tucson will be available for leasing in Los Angeles in 2014}
+
 \subsubsection*{Fuel Cell Vehicles}
 
 The first Fuel Cell Vehicle (FCV) models were shown in November 2013 in
@@ -101,6 +103,8 @@ new hydrogen fueling stations. In spite of their promise, FCVs will face
 competition from more established EV infrastructure in the state, since both
 classes of vehicles are chasing the same wealthy early-adopters. However, FCVs
 may be able to find a market niche in heavy-duty vehicles.
+
+\image{images/carbonfiber}{Carbon Fiber Production by BMW, Photo: BMW blog}
 
 \subsubsection*{Carbon Fiber}
 
