only Frank left

--- a/Christensen.tex
+++ b/Christensen.tex
@@ -60,6 +60,8 @@ all with slightly different specifications. These subtleties can mean the
 difference between receiving a tax credit, being eligible for a grant, or 
 being able to participate in the Renewable Fuel Standard (RFS) … or not.
 
+\image{images/b4}{The RFS is intended to promote the biofuels economy, Photo: ecowatch.com}
+
 Policies such as the Renewable Fuel Standard (RFS) are attempting to regulate 
 the embedded emissions within a biofuel by establishing a complex mandate to 
 use four different types of biofuels (cellulosic, advanced, biomass-based 
