Moved completed docs to new folder

--- a/Fyffe.tex
+++ b/Fyffe.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt]{papertex}
+\documentclass[11pt]{papertex}
 \usepackage[utf8]{inputenc}
 
 %% Colour for heading
@@ -39,7 +39,7 @@ Research and development efforts are on-going to make modern IC engines more
 efficient, more environmentally friendly, more powerful, and capable of 
 accepting a wider range of fuels.
 
-\image{images/CE}{The modern internal combustion engine}
+% \image{images/CE}{The modern internal combustion engine}
 
 \subsubsection*{Modern Engines}
 
