Frank, image is wide, see if it looks ok

--- a/Frank.tex
+++ b/Frank.tex
@@ -67,6 +67,8 @@ economically-sustainable, long-term alternative to the current transportation
 systems in California, which will increase transportation efficiency, use 100 
 percent renewable energy, and incorporate additional sustainability practices.
 
+\image{images/hsr}{}
+
 \subsubsection*{Rail as an Efficient, Clean Transportation Choice for
     California}
 
