Added 5 more articles

--- a/Christensen.tex
+++ b/Christensen.tex
@@ -60,7 +60,6 @@ all with slightly different specifications. These subtleties can mean the
 difference between receiving a tax credit, being eligible for a grant, or 
 being able to participate in the Renewable Fuel Standard (RFS) … or not.
 
-\image{images/b4}{The RFS is intended to promote the biofuels economy, Photo: ecowatch.com}
 
 Policies such as the Renewable Fuel Standard (RFS) are attempting to regulate 
 the embedded emissions within a biofuel by establishing a complex mandate to 
@@ -72,6 +71,9 @@ that allow someone to measure lifecycle emissions. There is a wide range of
 biofuel and those with lower associated lifecycle emissions, such as cellulosic 
 fuel, should be rewarded. However, investors are less likely to take on risk 
 by investing in cellulosic fuel when the incentives to do so are ambiguous.
+
+\image{images/b4}{The RFS is intended to promote the biofuels economy, 
+    Photo: ecowatch.com}
 
 The RFS is the largest driver of biofuel use in the United States, and one of 
 the world’s most aggressive biofuel policies. The RFS mandates the use of a 
